Install4J 8 updates