@@ -16,10 +16,10 @@
         <maven.compiler.source>${java.version}</maven.compiler.source>
         <maven.compiler.target>${java.version}</maven.compiler.target>
         <mainClass>com.kodedu.boot.AppStarter</mainClass>
-        <install4j.home>/home/travis/build/asciidocfx/AsciidocFX/install4j7.0.11</install4j.home>
-        <install4j.licenseKey>${env.LICENSE_KEY_7}</install4j.licenseKey>
+        <install4j.home>/home/travis/build/asciidocfx/AsciidocFX/install4j8.0</install4j.home>
+        <install4j.licenseKey>${env.LICENSE_KEY_8}</install4j.licenseKey>
         <openjfx.version>12</openjfx.version>
-        <ikonli.version>11.3.3</ikonli.version>
+        <ikonli.version>11.3.4</ikonli.version>
         <jaxb.version>2.3.2</jaxb.version>
     </properties>
 
@@ -127,7 +127,7 @@
         <dependency>
             <groupId>net.sourceforge.plantuml</groupId>
             <artifactId>plantuml</artifactId>
-            <version>1.2019.5</version>
+            <version>1.2019.7</version>
         </dependency>
         <dependency>
             <groupId>org.apache.xmlgraphics</groupId>
@@ -142,13 +142,13 @@
         <dependency>
             <groupId>com.install4j</groupId>
             <artifactId>install4j-runtime</artifactId>
-            <version>7.0.11</version>
-<!--            <scope>provided</scope>-->
+            <version>8.0</version>
+            <!--            <scope>provided</scope>-->
         </dependency>
         <dependency>
             <groupId>org.carrot2</groupId>
             <artifactId>morfologik-speller</artifactId>
-            <version>2.1.5</version>
+            <version>2.1.6</version>
             <exclusions>
                 <exclusion>
                     <artifactId>morfologik-polish</artifactId>
@@ -188,7 +188,9 @@
             <version>64.2</version>
         </dependency>
 
-        <dependency>
+        <!--  Uncomment for local run -->
+
+        <!--<dependency>
             <groupId>org.openjfx</groupId>
             <artifactId>javafx-swing</artifactId>
             <version>${openjfx.version}</version>
@@ -207,7 +209,7 @@
             <groupId>org.openjfx</groupId>
             <artifactId>javafx-fxml</artifactId>
             <version>${openjfx.version}</version>
-        </dependency>
+        </dependency>-->
 
     </dependencies>
 
@@ -319,6 +321,8 @@
                         javafx.graphics/com.sun.javafx.text=ALL-UNNAMED
                         --add-opens
                         javafx.base/com.sun.javafx.collections=ALL-UNNAMED
+                        --add-opens
+                        javafx.base/com.sun.javafx.collections=javafx.web
                         --add-exports
                         javafx.graphics/com.sun.scenario.effect.impl.prism=ALL-UNNAMED
                         --add-exports
